# Vulkan-Environment

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  app.cpp  typeStructs.h
api/: CMakeLists.txt
api/include/graphics/: font_loader.h  glm_helper.h  model_loader.h  render.h  resource_pool.h  resources.h  shader_structs.h  texture_loader.h
api/src/: CMakeLists.txt
demo/: CMakeLists.txt  demo.cpp
examples/: CMakeLists.txt  resource_pools.cpp  simple.cpp
include/: audio.h  glmhelper.h  timer.h
include/resources/: resources.h
include/resources/model/: model_animation.h  model_info.h
libs/: CMakeLists.txt
libs/OutfacingGraphics/: CMakeLists.txt
libs/OutfacingGraphics/.cache/clangd/index/: demo.cpp.19555A16D98C4C6D.idx  glmhelper.h.4601771D64A90E15.idx  model_animation.cpp.0EBB3F05CC0CFA93.idx  model_animation.h.75A08D8FC246D4ED.idx  model_info.h.99B410D0674C4C03.idx  resources.h.80450056328C892E.idx
libs/OutfacingGraphics/demo/: CMakeLists.txt  demo.cpp
libs/OutfacingGraphics/include/graphics/: font_loader.h  glm_helper.h  logger.h  model_loader.h  render.h  render_config.h  resource_pool.h  resources.h  shader_structs.h  texture_loader.h
libs/OutfacingGraphics/include/graphics/model/: animation.h  info.h
libs/OutfacingGraphics/src/: CMakeLists.txt  animation.cpp  vertex_types.h
libs/OutfacingGraphics/src/resources/: resources.h
libs/OutfacingGraphics/src/resources/model/: model_animation.cpp  model_animation.h  model_info.h
libs/ResourceLoader/: CMakeLists.txt
libs/ResourceLoader/.cache/clangd/index/: config.h.FF1B081E44A63B00.idx  demo.cpp.2C61D727FF989A63.idx  model_info.h.E78C3B1D16B4C9C0.idx  model_loader.h.69F37427D6DD611F.idx  stb_image.h.0B57BCDB78118982.idx  stb_image_impl.cpp.8B7C9E8C2848618F.idx
libs/ResourceLoader/demo/: CMakeLists.txt  demo.cpp
libs/ResourceLoader/include/: logger.h
libs/ResourceLoader/include/resource_loader/: font_loader.h  model_loader.h  model_render.h  texture_loader.h  vertex_model.h
libs/ResourceLoader/src/: CMakeLists.txt  assimp_loader.cpp  assimp_loader.h  config.h  font_loader.cpp  model_loader.cpp  texture_loader.cpp  vertex_model.cpp
libs/ResourceLoader/src/resource_loader/: vertex_model.cpp  vertex_model.h
libs/ResourceLoader/src/resources/: model_loader.cpp  model_loader.h
resource-loader/: CMakeLists.txt
resource-loader/include/resource_loader/: font_loader.h  model_loader.h  pool_manager.h  vertex_types.h
resource-loader/src/: CMakeLists.txt  assimp_loader.cpp  assimp_loader.h  font_loader.cpp  model_loader.cpp  stb_image_impl.cpp
resources/buildscripts/linux/: debug-no-copy.sh  debug.sh  release.sh
resources/buildscripts/windows/: README.md  debug-no-copy.bat  debug.bat  debug.ps1  release.bat  release.ps1
resources/models/: README.md  light_test.blend  light_test.blend1  light_test.fbx  wolf.fbx
resources/shaders/: 3D-lighting-anim.vert  3D-lighting-anim.vert.spv  3D-lighting.vert  3D-lighting.vert.spv  basicDirectional.frag  basicDirectional.vert  blinnphong-anim.frag  blinnphong-anim.frag.spv  blinnphong.frag  blinnphong.frag.spv  cmpShader.bat  fbasicDirectional.spv  fblinnphong-anim.spv  fblinnphong.spv  fflat.spv  final.vert  final.vert.spv  flat.frag  flat.frag.spv  flat.vert  v3D-lighting-anim.spv  v3D-lighting.spv  vbasicDirectional.spv  vflat.spv
resources/shaders/vulkan/: 3D-lighting-anim.vert  3D-lighting-anim.vert.spv  3D-lighting.vert  3D-lighting.vert.spv  flat.frag.spv
src/: #app.cpp#  CMakeLists.txt  app.cpp  app.h  audio.h  camera.cpp  camera.h  descriptorSets.h  descriptor_structs.h  device_state.h  frame.cpp  frame.h  freeCamera.cpp  freeCamera.h  logger.cpp  logger.h  main.cpp  model_loader.cpp  model_loader.h  model_loader.h.gch  pipeline.cpp  pipeline.h  pipeline_data.cpp  pipeline_data.h  render.cpp  render.h  render_config.h  render_structs.cpp  render_structs.h  renderpass.cpp  renderpass.h  shader.cpp  shader.h  shader_internal.cpp  shader_internal.h  shader_structs.h  swapchain.cpp  swapchain.h  texture_loader.cpp  texture_loader.h  (+7 more)
src/parts/: command.cpp  command.h  core.cpp  core.h  descriptors.cpp  descriptors.h  framebuffer.cpp  framebuffer.h  images.cpp  images.h  part_macros.h  primary.cpp  primary.h  render_pass.cpp  render_pass.h  render_style.cpp  render_style.h  swapchain.cpp  swapchain.h  threading.cpp  threading.h
src/parts/helper/: choose_physical_device.cpp  choose_physical_device.h  debug.cpp  debug.h  device.cpp  device.h
src/render_structs/: device_state.h  swapchain.cpp  swapchain.h  swapchain_frame.cpp  swapchain_frame.h
src/render_structs/swapchain/: attachment_image.cpp  attachment_image.h  render_pass_state.h  swapchain.cpp  swapchain.h  swapchain_frame.cpp  swapchain_frame.h
src/resources/: font_loader.cpp  font_loader.h  model_loader.cpp  model_loader.h  model_render.cpp  model_render.h  resource_pool.cpp  resource_pool.h  texture_loader.cpp  texture_loader.h
src/vulkan-render/: config.h  descriptorSets.h  descriptor_sets.h  descriptor_structs.h  model_loader.cpp  model_loader.h  pipeline.h  render.cpp  render.h  render_structs.h  texfont.cpp  texfont.h  texture_loader.cpp  texture_loader.h  vkhelper.cpp  vkhelper.h  vkinit.cpp  vkinit.h
src/vulkan-render/parts/: descriptor_structs.h  descriptors.cpp  descriptors.h  images.cpp  images.h  primary.cpp  primary.h  render_style.cpp  render_style.h  swapchain.cpp  swapchain.h
src/vulkan-render/resources/: font_loader.cpp  font_loader.h  model_loader.cpp  model_loader.h  model_render.cpp  model_render.h  resources.h  texture_loader.cpp  texture_loader.h
src/vulkan-render/resources/model/: #model_loader.cpp#  model_animation.cpp  model_animation.h  model_info.h  model_loader.cpp  model_loader.h  model_render.cpp  model_render.h
test/: CMakeLists.txt  test.cpp
